namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stagging
---
apiVersion: v1
kind: Namespace
metadata:
  name: master
