deploy-nodejs-backend.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: nodejs
  namespace: ENV
  labels:
        app: nodejs
spec:
  selector:
    matchLabels:
      app: nodejs
  replicas: 2 
  template: 
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: nodejs
        image: ikhsannugs/nodejs-backend:ENV-NO
        ports:
        - containerPort: 80
