nodejs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
  namespace: stagging
  labels:
    app: nodejs
spec:
  ports:
    - port: 8010
      targetPort: 3000
  selector:
    app: nodejs
  type: NodePort
