webapps-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapps
  namespace: master
  labels:
    app: webapps
spec:
  ports:
    - port: 8020
      targetPort: 80
  selector:
    app: webapps
  type: NodePort
