ingress-master.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-master
  namespace: master
spec:
  rules:
    - host: ikhsannugs.xyz
      http:
        paths: /webapps
          - backend:
              serviceName: webapps
              servicePort: 8020
    - host: ikhsannugs.xyz
      http:
        paths: /nodejs
          - backend:
              serviceName: nodejs
              servicePort: 8010
status:
  loadBalancer:
    ingress:
      - ip: 147.139.183.13
